# BlenderMathAnim

./: .gitignore  README.md  bmesh.pyi  mathutils.pyi  pyproject.toml  requirements.txt  update_library.sh
addons/: mod_surface.py  plane_through_three_objects.py  platonic solids.py  platonic_solids.py  polygons.py  riemann_sphere.py  solids.py
appearance/: textures.py
compositions/: compositions.py
docs/: bderivation.md
examples/: example_more_objects.py  example_objects.py  examples.py  examples_xml.py
extended_math_nodes/: generic_nodes.py
geometry_nodes/: complex_math_nodes.py  geometry_nodes.py  geometry_nodes_modifier.py  nodes.py
grandalf/: graphs.py
interface/: ibpy.py  interface_constants.py
mathematics/: dedup_vertices.md  fibonacci.py  iso_curves.py  marching_tetrahedra.py  polynomial.py  spherical_harmonics.py  zeros.py
objects/: annulus.py  arc.py  arrow.py  bderivation.py  benford.py  billiards_new_objects.py  billiards_objects.py  blend.py  bmatrix.py  bmorph_text.py  bobject.py  book.py  bounding_box.py  camera_plane.py  choreography.py  circle.py  clock.py  codeparser.py  cone.py  container.py  coordinate_system.py  cube.py  curtain.py  curve.py  cylinder.py  data.py  digital_number.py  disc.py  display.py  dynkin_diagram.py  ellipse.py  empties.py  face.py  file_explorer.py  floor.py  free_hand.py  function.py  functions.py  grid.py  hat_tile.py  (+37 more)
perform/: SceneRunner.py  render.py  scene.py  scene_example.py
physics/: constants.py
shader_nodes/: shader_nodes.py
short_moebius/: scene_moebius.py
tools/: images.py  io.py
(+593 files in other folders)
